--- a/src/index.css
+++ b/src/index.css
@@ -94,6 +94,7 @@ section {
     }
   }
 
+  /*HERO BADGE*/
   .hero-badge {
     @apply bg-black-200 py-2 px-4 rounded-full w-fit text-sm md:text-base text-nowrap;
   }
